// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mocked function which fails on toReturnWith > just one call 1`] = `
"expected "vi.fn()" to return with: 2 at least once

Received: 

  1st vi.fn() call return:

- 2
+ 1


Number of calls: 1
"
`;

exports[`mocked function which fails on toReturnWith > multi calls 1`] = `
"expected "vi.fn()" to return with: 2 at least once

Received: 

  1st vi.fn() call return:

- 2
+ 1

  2nd vi.fn() call return:

- 2
+ 1

  3rd vi.fn() call return:

- 2
+ 1


Number of calls: 3
"
`;

exports[`mocked function which fails on toReturnWith > oject type 1`] = `
"expected "vi.fn()" to return with: { a: '4' } at least once

Received: 

  1st vi.fn() call return:

  {
-   "a": "4",
+   "a": "1",
  }

  2nd vi.fn() call return:

  {
-   "a": "4",
+   "a": "1",
  }

  3rd vi.fn() call return:

  {
-   "a": "4",
+   "a": "1",
  }


Number of calls: 3
"
`;

exports[`mocked function which fails on toReturnWith > zero call 1`] = `
"expected "vi.fn()" to return with: 2 at least once

Number of calls: 0
"
`;
